2007-04-07  Thomas Schwinge  <tschwinge@gnu.org>

	* MAKEDEV.sh (mkdev): Specify the creation of `lpr[0-9' devices.

2002-09-17  Marcus Brinkmann  <marcus@gnu.org>

	* MAKEDEV.sh (mkdev: vcs): New console device.
	(mkdev: tty[0-9a-f]|tty[0-9][0-9a-f]): Replaced with new rules for
	tty[1-9][0-9].

2002-06-26  Roland McGrath  <roland@frob.com>

	* swapon.c (swaponoff): Fix last change.

2002-06-14  Roland McGrath  <roland@frob.com>

	* swapon.c (swaponoff): If get_privileged_ports fails with EPERM, try
	to open /servers/default-pager instead.

2002-05-07  Roland McGrath  <roland@frob.com>

	* swapon.c (check_signature): Use %zu for size_t arg.

2002-05-03  Roland McGrath  <roland@frob.com>

	* reboot.c: Include <error.h>.
	* halt.c: Likewise.

2002-03-23  James A. Morrison  <ja2morri@uwaterloo.ca>

	* halt.c (main): Use error, not perror.
	* reboot.c (main): Likewise.
	* update.c (main): Use error, not perror and exit.

2002-03-23  Roland McGrath  <roland@frob.com>

	* MAKEDEV.sh (mkdev: shm): Change tmpfs size argument to 50%.

	* MAKEDEV.sh (mkdev: shm): Give the file mode 644 and pass
	options to tmpfs: -m 1777 512M.

	* MAKEDEV.sh (mkdev: shm): New, uses /hurd/tmpfs filesystem.
	(mkdev: std): Add shm to the standard list.

2001-09-06  Roland McGrath  <roland@frob.com>

	* MAKEDEV.sh (pty cases): Remove ptyT? from the set.  Add pty?[g-v].

2001-02-27  Roland McGrath  <roland@frob.com>

	Use a new, more flexible RPC interface to the default pager.
	This allows swapon to do its own interpretation of Linux swap
	signature pages, and to support partial-device stores such as
	store_open will return for regular files on disk filesystems.
	* swapon.c: Include <hurd/default_pager.h>, not <mach/default_pager.h>.
	(ignore_signature, require_signature, quiet): New variables.
	(options): Add --silent, --no-signature, --require-signature.
	(main: parse_opt): Parse them.
	(check_signature): New function.
	(swaponoff): Use it unless --no-signature set, to get a remapped store